redirect all logs to console (to be managed by docker)